# imcapt_coco

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
notebooks/: Salesforce_finetune_blip_image_captioning_large.ipynb  microsoft_finetune_git_large_textcaps.ipynb
src/: main.py
src/conf/: config.yaml
src/features/: build_features.py  build_vocabulary.py  image_captioning_dataset.py  image_transformation.py
src/models/: train_model.py  valid_model.py
src/test/: test_processed_images.py
