[tool.poetry]
name = "image-captioning"
version = "0.1.0"
description = "Image Captining Deep Learning Project"
authors = ["Bertan ULUSOY <bertan_ulusoy@yahoo.com>"]
readme = "README.md"
packages = [{include = "image_captioning"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
numpy = "^1.24.2"
click = "^8.1.3"
sphinx = "^6.1.3"
coverage = "^7.1.0"
flake8 = "^6.0.0"
python-dotenv = "^0.21.1"
prefect = "^2.8.0"
protobuf = "^4.21.12"
pyarrow = "^11.0.0"
pandas-gbq = "^0.19.1"
mypy = "^1.0.0"
nltk = "^3.8.1"
datasets = "^2.9.0"
kaggle = "^1.5.12"
transformers = "^4.26.1"
torch = "^1.13.1"
torchvision = "^0.14.1"
torchtext = "^0.14.1"
matplotlib = "^3.7.0"
hydra-core = "^1.3.1"
tqdm = "^4.64.1"
types-tqdm = "^4.64.7.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
