[tool.poetry]
name = "image-captioning"
version = "0.1.0"
description = "Image Captining Deep Learning Project"
authors = ["Bertan ULUSOY <bertan_ulusoy@yahoo.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.scripts]
my-script = "src.main:main"


[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
numpy = "^1.24.2"
click = "^8.1.3"
sphinx = "^6.1.3"
coverage = "^7.1.0"
flake8 = "^6.0.0"
python-dotenv = "^0.21.1"
prefect = "^2.10.3"
protobuf = "^4.21.12"
pyarrow = "^11.0.0"
pandas-gbq = "^0.19.1"
mypy = "^1.0.0"
nltk = "^3.8.1"
datasets = "^2.9.0"
kaggle = "^1.5.12"
transformers = "^4.26.1"
torch = "^1.13.1"
torchvision = "^0.14.1"
torchtext = "^0.14.1"
matplotlib = "^3.7.0"
hydra-core = "^1.3.2"
tqdm = "^4.64.1"
types-tqdm = "^4.64.7.15"
pycocotools = "^2.0.6"
importlib-resources = "^5.12.0"
zipp = "^3.15.0"
importlib-metadata = "^6.3.0"
setuptools = "^67.6.1"
types-pycocotools = "^2.0.0.3"
types-requests = "^2.28.11.17"
pytest = "^7.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
